Fix size of mail address on small windows

--- a/less/agency.less
+++ b/less/agency.less
@@ -159,6 +159,9 @@ h1, h2, h3, h4, h5, h6 {
 	        font-size: 1.5em;
 	    }    
 	}
+    h3.longmail {
+        font-size: 16px;
+    }
 }
 
 header {
